add all routes
