# src/models/userModel.ts
@@ -25,3 +25,33 @@ export const createAccount = async (
   }
 };
 
+export const updateAccount = async (user: User, callback: Function) => {
+  try {
+    const updatedUser = await prisma.user.update({
+      where: { id: user.id },
+      data: {
+        login: user.login,
+        password: user.password,
+        roles: user.roles,
+        status: user.status
+      },
+    });
+
+    callback(null, updatedUser);
+  } catch (error) {
+    callback(error);
+  }
+}
+
+
+export const getAccount = async (uid: number, callback: Function) => {
+  try {
+    const user = await prisma.user.findFirst({
+      where: { id: uid },
+    });
+
+    callback(null, user);
+  } catch (error) {
+    callback(error);
+  }
+};
